sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:6: error: '=' expected but ';' found.
var minimum=0
^AlgSelectionSort:20: error: ')' expected but 'if' found.
		if(minimum!=i)
                ^